--- a/HW4/HW_4.1/4.1_style.css
+++ b/HW4/HW_4.1/4.1_style.css
@@ -39,7 +39,7 @@
 .content_section:hover{
     transform: scale(1.01);
     transition: 0.5s;
-    box-shadow: #5784c9 0px 0px 15px;
+    box-shadow: #5784c9 0 0 15px;
 }
 
 .header img{
@@ -62,6 +62,10 @@ form{
     transition: 1s;
 }
 
+.user_name{
+    transition: 1s;
+}
+
 .user_name:hover{
     transform: scale(1.05);
     transition: 0.5s;
@@ -75,6 +79,9 @@ form{
     border-radius: 3px;
     border: #c4c1c1 solid 1px;
     align-items: center;
+}
+
+.user_password{
     transition: 1s;
 }
 
@@ -177,4 +184,11 @@ img{
     text-decoration: none;
     color: #0095F6;
     margin-top: 20px;
+}
+
+.footer a span:hover{
+    transform: scale(1.2);
+    transition: 0.7s;
+    font-size: 18px;
+    color: #375185;
 }
