--- a/HW4/Add_HW/add_5_HW.css
+++ b/HW4/Add_HW/add_5_HW.css
@@ -26,6 +26,7 @@ body{
     background-color: white;
     flex-direction: column;
     border-radius: 10px;
+    transition: 0.7s;
 }
 .first-last-name{
     width: 100%;
